[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Scenes/HurtBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/HealthBar.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprite/Player/Run4.png" type="Texture" id=5]
[ext_resource path="res://sprite/Player/Idle0.png" type="Texture" id=6]
[ext_resource path="res://sprite/Player/Jump1.png" type="Texture" id=7]
[ext_resource path="res://sprite/Player/Run2.png" type="Texture" id=8]
[ext_resource path="res://sprite/Player/Jump4.png" type="Texture" id=9]
[ext_resource path="res://sprite/Player/Jump3.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "run",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "attackLeft",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ), ExtResource( 10 ) ],
"loop": true,
"name": "attackRight",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.0
height = 35.0

[node name="player" type="KinematicBody2D"]
collision_layer = 3
collision_mask = 4
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="stats" parent="." instance=ExtResource( 4 )]

[node name="HurtBox" parent="." instance=ExtResource( 2 )]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 3 )

[node name="healthBar" parent="." instance=ExtResource( 3 )]
margin_left = -104.0
margin_top = -72.0
margin_right = -104.0
margin_bottom = -72.0
[connection signal="no_health" from="stats" to="." method="_on_health_no_health"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
